// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders a medium Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="general"
  text="Hello World"
  type="solid"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="general"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="solid"
  >
    <div
      className="sc-AykKC gvXwks"
      onClick={[Function]}
      size="medium"
      type="solid"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders a small Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="small"
  skin="general"
  text="Hello World"
  type="solid"
>
  <styled.div
    onClick={[Function]}
    size="small"
    skin="general"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="solid"
  >
    <div
      className="sc-AykKC jKJOPg"
      onClick={[Function]}
      size="small"
      type="solid"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="general"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="general"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC ciYSrv"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined danger Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="danger"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="danger"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC cRLztP"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined premium Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="premium"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="premium"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC jrvWlt"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined standard Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="standard"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="standard"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC gxuRPN"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined success Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="success"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="success"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC jVaNIn"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge renders an outlined warning Badge component 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="warning"
  text="Hello World"
  type="outlined"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="warning"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="outlined"
  >
    <div
      className="sc-AykKC huZOqH"
      onClick={[Function]}
      size="medium"
      type="outlined"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge returns undefined for onClick if not provided 1`] = `
<Badge
  onClick={[Function]}
  size="medium"
  skin="general"
  text="Hello World"
  type="solid"
>
  <styled.div
    onClick={[Function]}
    size="medium"
    skin="general"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="solid"
  >
    <div
      className="sc-AykKC gvXwks"
      onClick={[Function]}
      size="medium"
      type="solid"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;

exports[`Badge should render without crashing 1`] = `
<Badge
  onClick={[MockFunction]}
  size="medium"
  skin="general"
  text="Hello World"
  type="solid"
>
  <styled.div
    onClick={[MockFunction]}
    size="medium"
    skin="general"
    theme={
      Object {
        "danger": "#F25C5E",
        "general": "#32536A",
        "premium": "#9B61B3",
        "standard": "#006fcf",
        "success": "#43a34c",
        "warning": "#FDB02B",
      }
    }
    type="solid"
  >
    <div
      className="sc-AykKC gvXwks"
      onClick={[MockFunction]}
      size="medium"
      type="solid"
    >
      <styled.span>
        <span
          className="sc-AykKD gYZYDa"
        >
          Hello World
        </span>
      </styled.span>
    </div>
  </styled.div>
</Badge>
`;
